Fixed submenu on mobile

--- a/components/Menu/Menu.module.css
+++ b/components/Menu/Menu.module.css
@@ -1,5 +1,5 @@
 .Menu {
-  height: 176px;
+  min-height: 176px;
 }
 
 .MainMenu {
@@ -11,12 +11,12 @@
 
 @media (min-width: 196px) {
   .Menu {
-    height: 196px;
+    min-height: 196px;
   }
 }
 @media (min-width: 768px) {
   .Menu {
-    height: 216px;
+    min-height: 216px;
   }
   .MainMenu {
     padding-top: 50px;
@@ -25,7 +25,7 @@
 
 @media (min-width: 1366px) {
   .Menu {
-    height: 251px;
+    min-height: 251px;
   }
   .MainMenu {
     padding-top: 60px;
